2009-10-26 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-clipboard.c (get_from_primary_clipboard_callback):
	Provides text content.

	* src/nact/nact-main-menubar.c
	(on_paste_activated, on_paste_into_activated):
	Only inserts if items provided by clipboard are not null.

	* src/nact/nact-iaction-tab.c (on_toolbar_label_changed):
	Only setup the label when current item is an action.

	* src/nact/nact-ibackground-tab.c (setup_folders):
	Only tries to setup folders when there is a current profile.

	* src/nact/nact-iadvanced-tab.c (release_schemes_list):
	Clear the list store on dialog dispose.

	* src/nact/nact-iaction-tab.c
	(nact_iaction_tab_initial_load_toplevel):
	Unref model after having initialized the combobox listview.
	(release_icon_combobox): Clear the list store in dialog dispose.

	* src/nact/nact-icommand-tab.c:
	* src/nact/nact-icommand-tab.h (nact_icommand_tab_has_label):
	Remove unused function.

	* configure.ac: Bump version number to 2.29.2.

2009-10-25 Pierre Wieser <pwieser@trychlos.org>

	* NEWS: Updated.

	* po/POTFILES.in: Update list of translatable files.

	* src/runtime/na-iabout.c (na_iabout_display):
	Do not mark authors names and emails for translating (#599520).

	* src/runtime/na-object-profile.c (is_current_folder_inside):
	Actually checks if current folder is inside one of specified folders.

	* src/nact/nact-iactions-list.c
	(nact_iactions_list_dispose): free list of modified items.
	(nact_iactions_list_fill): reset level_zero_order_changed flag.

	* src/nact/nact-main-menubar.c (on_level_zero_order_changed):
	The message now brings up the flag to be set.

	* src/nact/nact-tree-model.c (drop_inside):
	Set the level_zero_order_changed flag to TRUE.

	* src/nact/nact-preferences-editor.c
	(on_base_runtime_init_dialog, save_preferences):
	Let the user edit its preferred export format.

	* src/nact/nautilus-actions-config-tool.ui:
	Add Export tab to Preferences dialog.

2009-10-23 Pierre Wieser <pwieser@trychlos.org>
